Fixes for 1.9.4, #17